--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "form-data": "^2.3.2",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "node-fetch": "^2.1.2",
     "nodemailer": "^4.6.7"
   }
