--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "form-data": "^2.3.2",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.3.0",
+    "mailgun-js": "^0.20.0",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "node-fetch": "^2.1.2",
-    "nodemailer": "^4.6.7"
+    "nodemailer": "^4.6.7",
+    "nodemailer-mailgun-transport": "^1.4.0"
   }
 }
